@@ -720,11 +720,20 @@ class LMSNetDevManager extends LMSManager implements LMSNetDevManagerInterface
         if (!$short && $netdevlist) {
             $customer_manager = new LMSCustomerManager($this->db, $this->auth, $this->cache, $this->syslog);
 
-            $filecontainers = $this->db->GetAllByKey('SELECT fc.netdevid, '
-                . $this->db->GroupConcat("CASE WHEN fc.description = '' THEN '---' ELSE fc.description END") . ' AS descriptions
+            $filecontainers = $this->db->GetAllByKey('SELECT fc.netdevid
 			FROM filecontainers fc
 			WHERE fc.netdevid IS NOT NULL
 			GROUP BY fc.netdevid', 'netdevid');
+
+            if (!empty($filecontainers)) {
+                if (!isset($file_manager)) {
+                    $file_manager = new LMSFileManager($this->db, $this->auth, $this->cache, $this->syslog);
+                }
+                foreach ($filecontainers as &$filecontainer) {
+                    $filecontainer = $file_manager->GetFileContainers('netdevid', $filecontainer['netdevid']);
+                }
+            }
+
 
             foreach ($netdevlist as &$netdev) {
                 $netdev['customlinks'] = array();
@@ -736,10 +745,7 @@ class LMSNetDevManager extends LMSManager implements LMSNetDevManagerInterface
                         . $netdev['borough_ident'] . $netdev['borough_type'];
                 $netdev['simc'] = empty($netdev['city_ident']) ? null : $netdev['city_ident'];
                 $netdev['ulic'] = empty($netdev['street_ident']) ? null : $netdev['street_ident'];
-                $netdev['filecontainers'] = isset($filecontainers[$netdev['id']])
-                    ? explode(',', $filecontainers[$netdev['id']]['descriptions'])
-                    : array();
-
+                $netdev['filecontainers'] = isset($filecontainers[$netdev['id']]) ? $filecontainers[$netdev['id']] : array();
                 $netdev['lastonlinedate'] = lastonline_date($netdev['lastonline']);
             }
             unset($netdev);
